# liru

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
docs/: api_reference.md  bundling_third_party_dlls.md  next_steps_implementation.md  spout_sdk_structure.md
liru/: __init__.py  __init__.pyi  __version__.py  receiver.py  sender.py
scripts/: build_all_wheels.bat  download_spout_sdk.bat  verify_install.py
src/: bindings.cpp  receiver_wrapper.cpp  receiver_wrapper.h  sender_wrapper.cpp  sender_wrapper.h
tests/: conftest.py  test_context_manager.py  test_import.py  test_integration.py  test_platform.py  test_receiver.py  test_resource_management.py  test_sender.py
