[build-system]
requires = ["scikit-build-core>=0.10.0", "pybind11>=2.13.0"]
build-backend = "scikit_build_core.build"

[project]
name = "liru"
dynamic = ["version"]
description = "High-performance Python wrapper for Spout 2.007 GPU texture sharing"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.13"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Lauri Mäki", email = "laurimaeki@gmail.com"}
]
maintainers = [
    {name = "Lauri Mäki", email = "laurimaeki@gmail.com"}
]
keywords = ["spout", "gpu", "texture-sharing", "realtime", "video", "opengl", "moderngl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# No runtime dependencies (liru is self-contained)
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.2.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "moderngl>=5.11.0",
    "numpy>=2.0.0",
    "build>=1.2.0",
    "twine>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/veitsi/liru"
Documentation = "https://github.com/veitsi/liru/tree/main/docs"
Repository = "https://github.com/veitsi/liru"
Issues = "https://github.com/veitsi/liru/issues"
Changelog = "https://github.com/veitsi/liru/blob/main/CHANGELOG.md"

[tool.scikit-build]
cmake.version = ">=3.25"
cmake.build-type = "Release"
wheel.packages = ["liru"]
wheel.install-dir = "liru"
wheel.license-files = ["LICENSE", "THIRD_PARTY_LICENSES.txt"]

# Read version from __version__.py
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "liru/__version__.py"
regex = '''^__version__ = ["'](?P<value>[^"']+)["']'''

# Exclude build artifacts and docs from wheel
wheel.exclude = [
    "external/**",
    "tests/**",
    "docs/**",
    ".github/**",
    "scripts/**",
]

[tool.black]
line-length = 100
target-version = ["py313", "py314", "py315"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | external
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "external",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "moderngl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU (deselect with '-m \"not gpu\"')",
]
